# Learning-Tetris-Using-the-Noisy-Cross-Entropy-Method

./: .gitignore  BCTS.py  CE_method_with_noise.py  Dockerfile  Tetris.py  collect_grid_samples.py  collect_tetris_state_samples.py  load_best_elite_vector.py  load_best_weight_sample.py  load_sample_data.py  pyproject.toml  tetris_env.py  train_CE_with_noise.py
