[project]
name = "learning-tetris-using-the-noisy-cross-entropy-method"
version = "0.1.0"
description = ""
authors = [
    {name = "James Sue-Ling",email = "james_sueling@hotmail.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "tdqm (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false